--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-These are my packages for ArchLinux.
-You can also find them on AUR:
+These are my packages for Arch Linux.
+You can also find most of them on AUR:
 http://aur.archlinux.org/packages.php?SeB=m&L=2&K=fleger
