--- a/README
+++ b/README
@@ -1,3 +1,4 @@
-These are my packages for Arch Linux.
-You can also find most of them on AUR:
+These are my packages for Arch Linux and/or Arch Linux ARM.
+
+Most of them are available through the AUR:
 http://aur.archlinux.org/packages.php?SeB=m&L=2&K=fleger
